insertio immagine profilo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-fluid">
             <img class="navbar-brand" src="/img/logo.png" alt="logo">
@@ -25,4 +26,14 @@
           </div>
         </div>
       </nav>
+      <!--sezione immagine profilo-->
+      <section id="jumbotron" class="bg-info">
+        <div class="text-center py-4">
+            <h2>Pinco Pallo</h2>
+            <img class="w-25 d-inline-block" src="/img/profile_pic.svg" alt="Profile PIC">
+            <p class="small upper-case fs-3 text-secondary">WEB DESIGNER</p>
+        </div>
+    </section>
+    </header>
+
 </body>
