--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
       <!--sezione immagine profilo-->
     <section  class="bg-info">
-        <div class="text-center py-4">
+        <div class="text-center pt-4">
             <h2>Pinco Pallo</h2>
             <img class="w-25 d-inline-block" src="/img/profile_pic.svg" alt="Profile PIC">
             <p class="small upper-case fs-3 text-secondary">WEB DESIGNER</p>
@@ -38,8 +38,8 @@
     </header>
 
     <main>
-        <!--portfolio-->
-        <!--immagini-->
+    <!--inizio portfolio-->
+        
         <section>
              <!--immagine 1-->
             <div class=" container-fluid w-75">
@@ -115,8 +115,25 @@
             
 
         </section>
+        <!--Fine portfolio-->
 
-
+        <!--inizio ABOUT-->
+        <section  class="bg-info mt-5">
+            <div class="text-center pt-4">
+                <h2>ABOUT</h2>
+                <div class="container-fluid w-75 ">
+                    <div class="row">
+                        <div class="col-6">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis velit debitis placeat fugit quo tempora libero fuga quam possimus, magni commodi rerum perferendis. Aliquam, corrupti! Odio, odit? Deleniti, reprehenderit! Quo?</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis velit debitis placeat fugit quo tempora libero fuga quam possimus, magni commodi rerum perferendis. Aliquam, corrupti! Odio, odit? Deleniti, reprehenderit! Quo?</p>
+                        </div>
+                    </div>
+                </div>                
+            </div>
+        </section>
+        <!--fine ABOUT-->
     </main>
 
 </body>
