--- a/index.html
+++ b/index.html
@@ -134,6 +134,25 @@
             </div>
         </section>
         <!--fine ABOUT-->
+
+        <!--inizio CONTACT ME-->
+        <section>
+            <div class="p-5">
+                <h2 class="text-uppercase text-center">Contact Me</h2>
+                <form>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12 col-xl-6">
+                                <div class="mb-3 text-start">
+                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
+                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form> 
+            </div>             
+        </section>
     </main>
 
 </body>
