finito sezione label

--- a/index.html
+++ b/index.html
@@ -148,11 +148,39 @@
                                     <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
                                 </div>
                             </div>
+                            <div class="col-12 col-xl-6">
+                                <div class="mb-3 text-start">
+                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
+                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-xl-6">
+                                <div class="mb-3 text-start">
+                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
+                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-xl-6">
+                                <div class="mb-3 text-start">
+                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
+                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-lg-12">
+                                <div class="mb-3 text-start">
+                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                        <div class="text-center">
+                    <button type="button" class="btn btn-info me-3 rounded-3 text-dark fw-bold">Send</button>
+                         </div>
                 </form> 
             </div>             
         </section>
+        <!--fine CONTACT ME-->
     </main>
 
 </body>
