--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a class="nav-link text-info" aria-current="page" href="#">HOME</a>
               <a class="nav-link text-info" href="#">PORTFOLIO</a>
               <a class="nav-link text-info" href="#">ABOUT ME</a>
-              <a class="nav-link text-info" href="#" tabindex="-1" aria-disabled="true">CONTACT ME</a>
+              <a class="nav-link text-info" href="#" tabindex="-1" >CONTACT ME</a>
             </div>
           </div>
         </div>
@@ -37,6 +37,7 @@
     <!-- fine profilo-->
     </header>
 
+    <!--inizio main-->
     <main>
     <!--inizio portfolio-->
         
@@ -144,32 +145,32 @@
                         <div class="row">
                             <div class="col-12 col-xl-6">
                                 <div class="mb-3 text-start">
-                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
-                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                    <label for="InputFirstName" class="form-label small">First name</label>
+                                    <input type="text" class="form-control small" id="InputFirstName"  placeholder="Enter your first name...">
                                 </div>
                             </div>
                             <div class="col-12 col-xl-6">
                                 <div class="mb-3 text-start">
-                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
-                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                    <label for="InputLastName" class="form-label small">Last Name</label>
+                                    <input type="text" class="form-control small" id="InputLastName"  placeholder="Enter your Last name...">
                                 </div>
                             </div>
                             <div class="col-12 col-xl-6">
                                 <div class="mb-3 text-start">
-                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
-                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                    <label for="InputEmail" class="form-label small">Email address</label>
+                                    <input type="Email" class="form-control small" id="InputEmail"  placeholder="Enter your email...">
                                 </div>
                             </div>
                             <div class="col-12 col-xl-6">
                                 <div class="mb-3 text-start">
-                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
-                                    <input type="first-name" class="form-control small" id="exampleInputFirstName" aria-describedby="firstNameHelp" placeholder="Enter your first name...">
+                                    <label for="InputPhoneNumber" class="form-label small">Phone Number</label>
+                                    <input type="Number" class="form-control small" id="InputPhoneNumber"  placeholder="Enter your Phone Number...">
                                 </div>
                             </div>
                             <div class="col-12 col-lg-12">
                                 <div class="mb-3 text-start">
-                                    <label for="exampleInputFirstName" class="form-label small">First name</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <label for="InputMessage" class="form-label small">Message</label>
+                                    <textarea class="form-control" id="InputMessage" rows="3"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -182,5 +183,26 @@
         </section>
         <!--fine CONTACT ME-->
     </main>
+    <!--fine main-->
 
+    <!--inizio footer-->
+    <footer>
+        <div class="container-fluid bg-dark">
+            <div class="container w-75 text-center">
+                <div class="row pt-5">
+                    <div class="col-6 text-secondary">
+                        <h1>LOCATION</h1>
+                        <p>2215 John Daniel Drive</p>
+                        <p>Clark,MO 65243</p>
+                    </div>
+                    <div class="col-6 text-secondary">
+                        <h1>AROUND THE WEB</h1>
+                        <a class="text-info" href="#">www.pincopallo.com</a>
+                    </div>
+                    <p class="text-secondary">Copyright &copy; Your Website 2022</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--fine footer-->
 </body>
